fix sidebar overflow

--- a/src/css/partials/app.less
+++ b/src/css/partials/app.less
@@ -379,6 +379,7 @@ html, body{height: 100%}
 
 @media(max-width: @screen-xs-max){
 	.page--sidebar-visible{
+		overflow: hidden;
 		.header .auth .show-sidebar{
 			i{.fa-mixin-icon(times)}
 		}
